src/main/resources/Krakatau-master/tests/assembler/bad/name0.j
.class [0]
.super [0]
.end class
